--- a/JS DOM/Async JavaScript/fetch-Project.css
+++ b/JS DOM/Async JavaScript/fetch-Project.css
@@ -1,1 +1,35 @@
 
+            body{
+                margin:0%;
+                padding:0%;
+                box-sizing: border-box;
+            }
+
+            .searchBar{
+                width: 100%;
+                height: auto;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 50px 0px;
+            }
+
+            .searchBar input{
+                width: 500px;
+                height: 50px;
+                padding-left: 20px;
+                margin-right: 30px;
+            }
+
+            .searchBar button{
+                width: 130px;
+                height: 50px;
+                padding: 0px 20px;
+            }
+
+            .resultBar{
+                width: 100%;
+                height: auto;
+                border: 1px solid lightgray;
+            }
+
